app/assets/stylesheets/modules/search_area.styl
.search-with-results
  position: relative
  width: 100%

.search-area
  $display-flexbox()
  align-items: center

  .search-with-results
    .results
      left: 0px
  .select-box
    min-width: 140px
    height: 32px
    border-radius: 20px 0px 0px 20px
    box-shadow: 0 1px 3px rgba(255,255,255,0.8) inset
    border-color: $gray-light
    select
      padding-top: 7px
      white-space: nowrap
      overflow: hidden

.with-filter
  .search-field
    border-left: none
    border-top-left-radius: 0px
    border-bottom-left-radius: 0px
  input[type="search"]
    border-radius: 0px

.search-field
  position: relative
  width: 100%
  height: $tab-header-field-height
  background-color: white
  border: 1px solid $gray-light
  border-radius: 20px 20px 20px 20px
  box-shadow: 0 1px 3px rgba(0,0,0,0.1) inset

  .input
    $stretch(0, 35px, 0, 0)
  input[type="search"]
    padding: 0 7px
    width: 100%
    height: 100%
    font-size: $base-font-size
    -webkit-appearance: none
    -moz-appearance: none
    appearance: none
    border: none
    color: $gray-darkest
    opacity: 0.6
    border-radius: 20px 0px 0px 20px
  input:focus
    opacity: 1
    border: none
    outline: none

.search-button
  position: absolute
  top: 0
  right: 0
  bottom: 0
  padding: 0 7px 0 9px
  width: 35px
  font-size: $base-font-size
  line-height: $tab-header-field-height - 2px
  cursor: pointer
  background-color: $gray-lightest
  box-shadow: 0 1px 3px rgba(255,255,255,0.8) inset
  border-left: 1px solid $gray-light
  border-radius: 0 20px 20px 0
  &:active
    box-shadow: 0 1px 2px rgba(0,0,0,0.05) inset
  .ss-search
    position: relative
    top: 2px


// When used inside the entry form, the form's border-spacing also
// applies to the tables inside the autocomplete-results
// TODO this needs to be merged with the other uses of the same selector
.search-with-results
  border-spacing: 0
  .results.shrink-result-width
    right: auto
  .results // Necessary overrides/resets for .results which is per default geared towards use in forms
    left: 13px
    right: 35px
    margin-right: 0
    font-size: 11px

.search-autocomplete-list,
.results .search-autocomplete-list //necessary for overriding too-specific selector ".results ol > *" in mixins.css.sass
  display: table
  width: 100%
  li
    display: table-row 
    cursor: pointer
  li:hover
    $highlight(lighten($blue, 20), 6%, 'darken')
    color: white
  .item-value
    color: $gray
  .selected,
  .selected:hover
    color: white
    $highlight($blue)
    > .item-value
      color: white
  .item-description
    color: $gray-darkest
  .item-value,
  .item-description
    padding: 2px 5px
    display: table-cell

// Search results position widget
.search-results-position
  width: 30%
  max-width: 160px
  margin-left: 16px

